# eMELA

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  CreateGrid.cc  GetPdf.cc  GetPdfGrid.cc  example.cc
inc/eMELA/: analytics.hh  bspdf.hh  constants.hh  eMELA.hh  grid.hh  ilc500.hh  numerics.hh  specialfunctions.hh  version.h.in
src/commons/: activeflavours.h  alpha.h  beta.h  charges.h  consts.h  facscheme.h  ipt.h  massthrs.h  nfsum.h  ns.h  renscheme.h  tecparam.h
src/cpp/: analytics.cc  bspdf.cc  cppwrapper.cc  emela.cc  fortran_wrapper.cc  grid.cc  ilc500.cc  specialfunctions.cc
src/evolution/: NDistributions.f  alpha.f  evol_alpxx_magnus.f  evol_alpxx_pathordering.f  evol_msbar_fixed.f  evol_msbar_pathordering.f
src/initialization/: InitializeEvolution.f  SetDefaultParameters.f  getters.f  setters.f
